@@ -84,6 +84,13 @@
       <scope>runtime</scope>
     </dependency>
 
+    <dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.11.0</version>
+</dependency>
+
+
     <!-- JPA -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -176,6 +183,62 @@
             <version>0.0.8</version>
             <configuration>
               <mainClass>com.example.agile_re_tool.UC03CreateUserStory</mainClass>
+              <launcher>exec</launcher>
+              <options>
+                <option>--add-modules=javafx.controls,javafx.fxml,javafx.graphics</option>
+              </options>
+              <systemPropertyVariables>
+                <javafx.platform>${javafx.platform}</javafx.platform>
+              </systemPropertyVariables>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>uc14-ui</id>
+      <properties>
+        <javafx.version>21.0.2</javafx.version>
+      </properties>
+
+      <dependencies>
+        <dependency>
+          <groupId>com.h2database</groupId>
+          <artifactId>h2</artifactId>
+          <version>2.2.224</version>
+        </dependency>
+
+        <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-controls</artifactId>
+          <version>${javafx.version}</version>
+          <classifier>${javafx.platform}</classifier>
+        </dependency>
+
+        <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-fxml</artifactId>
+          <version>${javafx.version}</version>
+          <classifier>${javafx.platform}</classifier>
+        </dependency>
+
+        <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-graphics</artifactId>
+          <version>${javafx.version}</version>
+          <classifier>${javafx.platform}</classifier>
+        </dependency>
+      </dependencies>
+
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-maven-plugin</artifactId>
+            <version>0.0.8</version>
+            <configuration>
+              <mainClass>com.example.agile_re_tool.UC14ReleasePlan</mainClass>
               <launcher>exec</launcher>
               <options>
                 <option>--add-modules=javafx.controls,javafx.fxml,javafx.graphics</option>
